--- a/css/game.css
+++ b/css/game.css
@@ -7,7 +7,7 @@
 
 .actor  { position: absolute;  }
 .player { background: rgb(64, 64, 64); }
-
+.coin ( background: rgb(241, 229 ,89); }
 .game {
   overflow: hidden;
   max-width: 600px;
